cabal-version:      2.4
name:               cardano-secp256k1-tests
version:            1.0.0.0
license:            Apache-2.0
license-files:
  LICENSE

maintainer: Dquadrant
author: Dquadrant Team

executable secp256-tests
  main-is: Main.hs
  hs-source-dirs: unit-tests
  other-modules:
    Test.EcdsaSecp256k1Tests
    Test.SchnorrSecp256k1Tests
    Util.Utils
  build-depends:
      aeson
      , base                  >=4.9 && <5
      , bytestring
      , cardano-crypto-class
      , text
      , utf8-string
      , random-bytestring
      , tasty
      , tasty-hunit


test-suite secp-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: unit-tests
  other-modules:
    Test.EcdsaSecp256k1Tests
    Test.SchnorrSecp256k1Tests
    Util.Utils
  build-depends:
      aeson
      , base                  >=4.9 && <5
      , bytestring
      , cardano-crypto-class
      , text
      , utf8-string
      , random-bytestring
      , tasty
      , tasty-hunit

