cabal-version:      2.4
name:               cardano-secp256k1-tests
version:            1.0.0.0
license:            Apache-2.0
license-files:
  LICENSE

maintainer: Dquadrant
author: Dquadrant Team

executable vector-tests
  main-is: Main.hs
  hs-source-dirs: unit-tests
  other-modules:
    Test.EcdsaSecp256k1Tests
    Test.SchnorrSecp256k1Tests
    Util.Utils
    Util.Parsers
    TestVector.EcdsaSecp256k1Vectors
    TestVector.SchnorrSecp256k1Vectors

  build-depends:
      aeson
      , base                  >=4.9 && <5
      , bytestring
      , cardano-crypto-class
      , text
      , text-conversions
      , utf8-string
      , random-bytestring
      , tasty
      , tasty-hunit
      , serialise
      , cardano-binary
      , base16-bytestring
      , cassava



test-suite secp-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: unit-tests
  other-modules:
    Test.EcdsaSecp256k1Tests
    Test.SchnorrSecp256k1Tests
    Util.Utils
    Util.Parsers
    TestVector.EcdsaSecp256k1Vectors
    TestVector.SchnorrSecp256k1Vectors

  build-depends:
      aeson
      , base                  >=4.9 && <5
      , bytestring
      , cardano-crypto-class
      , text
      , text-conversions
      , utf8-string
      , random-bytestring
      , tasty
      , tasty-hunit
      , serialise
      , cardano-binary
      , base16-bytestring
      , cassava


