cabal-version:      2.4
name:               cardano-secp256k1-tests
version:            1.0.0.0
license:            Apache-2.0
license-files:
  LICENSE

maintainer: Dquadrant
author: Dquadrant Team

executable vector
  main-is: Main.hs
  hs-source-dirs: vector-tests
  other-modules:
    Test.EcdsaSecp256k1Tests
    Test.SchnorrSecp256k1Tests
    Util.Utils
    Util.StringConstants
    TestVector.EcdsaSecp256k1Vectors
    TestVector.SchnorrSecp256k1Vectors
    TestVector.Vectors
  build-depends:
      aeson
      , base                  >=4.9 && <5
      , bytestring
      , cardano-crypto-class
      , text
      , text-conversions
      , utf8-string
      , random-bytestring
      , tasty
      , tasty-hunit
      , serialise
      , cardano-binary
      , base16-bytestring
      , cassava
      , cborg

test-suite secp-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: vector-tests
  other-modules:
    Test.EcdsaSecp256k1Tests
    Test.SchnorrSecp256k1Tests
    Util.Utils
    TestVector.EcdsaSecp256k1Vectors
    TestVector.SchnorrSecp256k1Vectors
    TestVector.Vectors

  build-depends:
      base                  >=4.9 && <5
      , bytestring
      , cardano-crypto-class
      , text
      , text-conversions
      , utf8-string
      , random-bytestring
      , tasty
      , tasty-hunit
      , serialise
      , cardano-binary
      , base16-bytestring
      , cassava
      , cborg

benchmark secp-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmarks
  ghc-options:   "-with-rtsopts=-A32m"
  other-modules:
    Secp256k1Bench
  build-depends:
      aeson
      , base                  >=4.9 && <5
      , bytestring
      , cardano-crypto-class
      , text
      , text-conversions
      , utf8-string
      , random-bytestring
      , tasty
      , tasty-hunit
      , serialise
      , cardano-binary
      , base16-bytestring
      , tasty-bench
      , cborg
 